--- a/style.css
+++ b/style.css
@@ -2,4 +2,51 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.banner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.banner-img {
+  width: 100%;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.banner-img img {
+  width: 100%;
+  display: block;
+}
+
+.banner-content {
+  position: absolute;
+  text-align: center;
+  color: white;
+}
+
+.banner-content h1{
+    font-size: 3em;
+    margin: 0;
+}
+
+.banner-content h3{
+    font-weight: lighter;
+    font-size: 2em;
 }
