--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  text-align: center; /* Center the text content in the body */
 }
 
 .banner {
@@ -41,12 +38,34 @@ body {
   color: white;
 }
 
-.banner-content h1{
-    font-size: 3em;
-    margin: 0;
+.banner-content h1 {
+  font-size: 3em;
+  margin: 0;
 }
 
-.banner-content h3{
-    font-weight: lighter;
-    font-size: 2em;
+.banner-content h3 {
+  font-weight: lighter;
+  font-size: 2em;
+}
+
+.all-categories {
+  text-align: center;
+  font-weight: bolder;
+  margin: auto;
+}
+
+.all-categories h1 {
+  color: #FF0000;
+  font-size: 2em;
+}
+
+.all-categories h3 {
+  color: #FF0000;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.all-categories h2 {
+  color: #070211;
+  font-size: 2em;
 }
